@@ -76,5 +76,13 @@
   padding-top: 10px;
 }
 
+/* what if selection screen */
+.what-if-selection-track-desc {
+  font-size: 11pt;
+  padding-left: 40px;
+  padding-bottom: 10px;
+}
+
+
 
 
